--- a/main_page.html
+++ b/main_page.html
@@ -10,7 +10,7 @@
 <body>
 
     <header class="test-one">
-        <img class="play-that" src=" play_with.png " alt="picture of rede ">
+        <img class="play-that" src="./Icons-representations/play_with.png " alt="picture of rede ">
         <nav class="test-four">
             <ul>
                 <li><a href="home.html">Home</a></li>
