--- a/main_page.html
+++ b/main_page.html
@@ -10,7 +10,7 @@
 <body>
 
     <header class="test-one">
-        <img class="play-that" src="./Icons-representations/play_with.png " alt="picture of rede ">
+        <img class="play-that" src="./Icons-representations/play_with.png " alt="">
         <nav class="test-four">
             <ul>
                 <li><a href="home.html">Home</a></li>
@@ -31,7 +31,7 @@
         <p class="test-five-test">calleth for the waters of the sea, and poureth them</p>
         <p class="test-five-test">upon the face of the earth: The Lord is his name.</p>
         <p class="test-five-test">Amos 9.6</p>
-        <img class="play-with" src="nigeria.png" alt="picture of rede ">
+        <img class="play-with" src="./Pictures/nigeria.png" alt="">
 
         <p class="play-test-sample"><a href="">CONNECT TO OFFICIALS</a></p>
         <p class="tell-one">______________</p>
