--- a/main_page.html
+++ b/main_page.html
@@ -31,7 +31,7 @@
         <p class="test-five-test">calleth for the waters of the sea, and poureth them</p>
         <p class="test-five-test">upon the face of the earth: The Lord is his name.</p>
         <p class="test-five-test">Amos 9.6</p>
-        <img class="play-with" src="./Pictures/nigeria.png" alt="">
+        <img class="play-with" src="./Icons-representations/nigeria.png" alt="">
 
         <p class="play-test-sample"><a href="">CONNECT TO OFFICIALS</a></p>
         <p class="tell-one">______________</p>
@@ -43,16 +43,16 @@
             <p class="place-one">Firstly we will like to thank God for</p>
             <p class="place-two">another Great new achivement.</p>
         </div>
-        <img class="place-three" src="test_seven.webp" alt="human prasing God on his knees">
-        <img class="place-four" src="back.png" alt="for the back arrow">
+        <img class="place-three" src="./Pictures/test_seven.webp" alt="human prasing God on his knees">
+        <img class="place-four" src="./Icons-representaions/back.png" alt="for the back arrow">
         <p class="place-five">We thank God for the ability to create and use this platform for our church daily</p>
         <p class="place-five">routine we employ all our candidates too always visit for updates.</p>
 
         <h3>Follow us here on upper room mega chapel for more updates/contents</h3>
         <nav class="place-ten">
             <ul>
-                <li><button class="button-one"><img  class="play-seven" src="flower_test.png" alt="this will load with the image">Follow our updates<img  class="play-seven" src="flower_test.png" alt="this will load with the image"></button></li>
-                <li><button class="button-two"><img  class="play-seven" src="flower_test.png" alt="this will load with the image">Explore places<img  class="play-seven" src="flower_test.png" alt="this will load with the image"></button></li>
+                <li><button class="button-one"><img  class="play-seven" src="./Icons-representations/flower_test.png" alt="this will load with the image">Follow our updates<img  class="play-seven" src="flower_test.png" alt="this will load with the image"></button></li>
+                <li><button class="button-two"><img  class="play-seven" src="./Icons-representations/flower_test.png" alt="this will load with the image">Explore places<img  class="play-seven" src="flower_test.png" alt="this will load with the image"></button></li>
             </ul>
         </nav>
         <h4>Nothing of God is waist</h4>
@@ -60,10 +60,10 @@
 
         <nav class="place-six">
             <ul id="image-slider">
-                <li class="one"><img src="test_sample.jpg" alt="for the first image"></li>
-                <li class="two"><img src="sunday_school.jpg" alt="for the first image"></li>
-                <li class="three"><img src="sunday_service.jpg" alt="for the first image"></li>
-                <li class="four"><img src="thanks_two.jpg" alt="for the first image"></li>
+                <li class="one"><img src="./Pictures/test_sample.jpg" alt="for the first image"></li>
+                <li class="two"><img src="./Pictures/sunday_school.jpg" alt="for the first image"></li>
+                <li class="three"><img src="./Pictures/sunday_service.jpg" alt="for the first image"></li>
+                <li class="four"><img src="./Pictures/thanks_two.jpg" alt="for the first image"></li>
             </ul>
         </nav>
 
