--- a/main_page.html
+++ b/main_page.html
@@ -13,11 +13,11 @@
         if (isAndroid) {
             window.location.href = './For Phone/Home_page.html';
         } else if (isWindows) {
-            window.location.href = '....';
+            // This is to continue displaying the current file 
         } else if (screenWidth.matches) {
             window.location.href = './For Phone/Home_page.html';
         } else {
-            window.location.href = '......';
+            // This is to continue displaying the current file 
         }
     </script>
 </head>
