--- a/For Phone/Home_page.html
+++ b/For Phone/Home_page.html
@@ -8,10 +8,13 @@
 </head>
 
 <body>
-    <header class="header-container">
+    <header class="header-two">
+        
+    </header>
+    <main class="header-container">
         <img class="back-arrow" src="./Icons-representations/back_one_test.png" alt="for back arrow">
 
-    </header>
+    </main>
     <main class="main-container"></main>
 
 
