--- a/main_page.html
+++ b/main_page.html
@@ -23,10 +23,8 @@
 </head>
 
 <body>
-
-    <header class="test-one">
-        <img class="play-that" src="./Icons-representations/play_with.png " alt="">
-        <nav class="test-four">
+    <header class="play-things">
+         <nav class="test-four">
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li>
@@ -39,6 +37,10 @@
                 </li>
             </ul>
         </nav>
+    </header>
+    <main class="test-one">
+        <img class="play-that" src="./Icons-representations/play_with.png " alt="">
+       
         <p class="test-two">Upper Room</p>
         <p class="test-test">Mega Chapel.</p>
         <p class="test-five">It is he that buildeth his stories in the heaven, and</p>
@@ -51,7 +53,7 @@
         <p class="play-test-sample"><a href="">CONNECT TO OFFICIALS</a></p>
         <p class="tell-one">______________</p>
 
-    </header>
+    </main>
 
     <main class="main-container">
         <div>
