--- a/main_page.html
+++ b/main_page.html
@@ -23,22 +23,7 @@
 </head>
 
 <body>
-    <header class="play-things">
-         <nav class="test-four">
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li>
-                    <a href="login.html">Login</a>
-                </li>
-                <li><a href="admin.html">Admins</a></li>
-                <li><a href="about.html">Workers</a></li>
-                <li>
-                    <a href="">Investing</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main class="test-one">
+    <header class="test-one">
         <img class="play-that" src="./Icons-representations/play_with.png " alt="">
        
         <p class="test-two">Upper Room</p>
@@ -53,6 +38,22 @@
         <p class="play-test-sample"><a href="">CONNECT TO OFFICIALS</a></p>
         <p class="tell-one">______________</p>
 
+    </header>
+
+     <main class="play-things">
+         <nav class="test-four">
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li>
+                    <a href="login.html">Login</a>
+                </li>
+                <li><a href="admin.html">Admins</a></li>
+                <li><a href="about.html">Workers</a></li>
+                <li>
+                    <a href="">Investing</a>
+                </li>
+            </ul>
+        </nav>
     </main>
 
     <main class="main-container">
