--- a/main_page.html
+++ b/main_page.html
@@ -23,8 +23,11 @@
 </head>
 
 <body>
-    <header class="play-things">
-         <nav class="test-four">
+    
+    <header class="test-one">
+        <img class="play-that" src="./Icons-representations/play_with.png " alt="">
+
+        <nav class="test-four">
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li>
@@ -37,9 +40,6 @@
                 </li>
             </ul>
         </nav>
-    </header>
-    <main class="test-one">
-        <img class="play-that" src="./Icons-representations/play_with.png " alt="">
        
         <p class="test-two">Upper Room</p>
         <p class="test-test">Mega Chapel.</p>
@@ -53,7 +53,7 @@
         <p class="play-test-sample"><a href="">CONNECT TO OFFICIALS</a></p>
         <p class="tell-one">______________</p>
 
-    </main>
+    </header>
 
     <main class="main-container">
         <div>
