--- a/For Phone/Home_page.html
+++ b/For Phone/Home_page.html
@@ -10,11 +10,20 @@
 <body>
     <header class="header-two">
 
+        <p class="test-two">Upper Room</p>
+        <p class="test-test">Mega Chapel.</p>
+        <p class="test-five">It is he that buildeth his stories in the heaven, and</p>
+        <p class="test-five-test">hath founded his troop in the earth; he that</p>
+        <p class="test-five-test">calleth for the waters of the sea, and poureth them</p>
+        <p class="test-five-test">upon the face of the earth: The Lord is his name.</p>
+        <p class="test-five-test">Amos 9.6</p>
+
     </header>
     <main class="header-container">
         <img class="test-infix" src="./Icons-representations/back_down_two.png">
     </main>
     <main class="main-container"></main>
+
 
     <img class="test-seven" src="./Icons-representations/sample_five.png" alt="the questions and request style...">
     <script src="Home_page.js"></script>
