--- a/For Phone/Home_page.html
+++ b/For Phone/Home_page.html
@@ -9,6 +9,7 @@
 
 <body>
     <header class="header-two">
+        <img class="play-that" src="./Icons-representations/play_with.png " alt="">
 
         <p class="test-two">Upper Room</p>
         <p class="test-test">Mega Chapel.</p>
