--- a/For Phone/Home_page.html
+++ b/For Phone/Home_page.html
@@ -21,11 +21,14 @@
 
     </header>
     <main class="header-container">
-        <img class="test-infix" src="./Icons-representations/back_down_two.png">
+
     </main>
-    <main class="main-container"></main>
+    <main class="main-container">
 
 
+    </main>
+
+    <img class="test-infix" src="./Icons-representations/back_down_two.png">
     <img class="test-seven" src="./Icons-representations/sample_five.png" alt="the questions and request style...">
     <script src="Home_page.js"></script>
 </body>
