--- a/For Phone/Home_page.html
+++ b/For Phone/Home_page.html
@@ -20,12 +20,12 @@
         <p class="test-five-test">Amos 9.6</p>
 
     </header>
-    <main class="header-container">
-
-    </main>
+    <main class="header-container"></main>
     <main class="main-container">
-
-
+        <div>
+            <p class="place-one">Firstly we will like to thank God for</p>
+            <p class="place-two">another Great new achivement.</p>
+        </div>
     </main>
 
     <img class="test-infix" src="./Icons-representations/back_down_two.png">
