--- a/For Phone/Home_page.html
+++ b/For Phone/Home_page.html
@@ -25,6 +25,10 @@
         <div>
             <p class="place-one">Firstly we will like to thank God for</p>
             <p class="place-two">another Great new achivement.</p>
+            <p class="plat-one">Thanks to all our investors</p>
+            <p class="plat-three">Our multitask all our services</p>
+            <p class="plat-three">through different means.</p>
+            <input type="text" placeholder="Search our events here" class="plat-two">
         </div>
     </main>
 
