--- a/main_page.html
+++ b/main_page.html
@@ -57,13 +57,22 @@
 
     <main class="main-container">
         <div>
-            <p class="place-one">Firstly we will like to thank God for</p>
-            <p class="place-two">another Great new achivement.</p>
+            <p class="place-one">We will like to thank God for another</p>
+            <p class="place-two">Great new achivement.</p>
+            <p class="place-five">We thank God for the ability to create and use this platform for our church daily</p>
+            <p class="place-five">routine we employ all our candidates too always visit for updates.</p>
+
+            <nav class="type-two">
+                <ul>
+                    <li>
+                        <button class="type-three">Events <img src="./Icons-representations/back_one_test.png" class="type-test"></button></li>
+                    <li><input type="text" placeholder="Search here..." class="type-one"></li>
+                    <li><button class="type-four">Search</button></li>
+                </ul>
+            </nav>
         </div>
         <img class="place-three" src="./Pictures/test_seven.webp" alt="human prasing God on his knees">
         <img class="place-four" src="./Icons-representaions/back.png" alt="for the back arrow">
-        <p class="place-five">We thank God for the ability to create and use this platform for our church daily</p>
-        <p class="place-five">routine we employ all our candidates too always visit for updates.</p>
 
         <h3>Follow us here on upper room mega chapel for more updates/contents</h3>
         <nav class="place-ten">
