--- a/For Phone/Home_page.html
+++ b/For Phone/Home_page.html
@@ -30,6 +30,9 @@
             <p class="plat-three">through different means.</p>
             <input type="text" placeholder="Search our events here" class="plat-two">
         </div>
+
+
+        <img src="./Pictures/test_seven.webp" class="type-one">
     </main>
 
     <img class="test-infix" src="./Icons-representations/back_down_two.png">
