--- a/For Phone/Home_page.html
+++ b/For Phone/Home_page.html
@@ -23,11 +23,11 @@
     <main class="header-container"></main>
     <main class="main-container">
         <div>
-            <p class="place-one">Firstly we will like to thank God for</p>
-            <p class="place-two">another Great new achivement.</p>
-            <p class="plat-one">Thanks to all our investors</p>
-            <p class="plat-three">Our multitask all our services</p>
-            <p class="plat-three">through different means.</p>
+            <p class="place-one">We will like to thank God for another</p>
+            <p class="place-two">Great new achivement.</p>
+            <p class="plat-one">Thanks to all our investors for the</p>
+            <p class="plat-three">ability to multitask all our</p>
+            <p class="plat-three">services through different means.</p>
             <input type="text" placeholder="Search our events here" class="plat-two">
         </div>
 
