--- a/main_page.html
+++ b/main_page.html
@@ -60,7 +60,7 @@
             <p class="place-one">We will like to thank God for another</p>
             <p class="place-two">Great new achivement.</p>
             <p class="place-five">We thank God for the ability to create and use this platform for our church daily</p>
-            <p class="place-five">routine we employ all our candidates too always visit for updates.</p>
+            <p class="place-five">routine we employ all our brethren too always visit for more updates.</p>
 
             <nav class="type-two">
                 <ul>
