--- a/main_page.html
+++ b/main_page.html
@@ -56,7 +56,8 @@
     </header>
 
     <main class="main-container">
-        <div>
+        <div class="sample-one">
+
             <p class="place-one">We will like to thank God for another</p>
             <p class="place-two">Great new achivement.</p>
             <p class="place-five">We thank God for the ability to create and use this platform for our church daily</p>
@@ -67,10 +68,11 @@
                     <li>
                         <button class="type-three">Events <img src="./Icons-representations/back_one_test.png" class="type-test"></button></li>
                     <li><input type="text" placeholder="Search here..." class="type-one"></li>
-                    <li><button class="type-four">Search</button></li>
+                    <li><button class="type-four">Search <img src="./Icons-representations/search_things.png" class="type-class"></button></li>
                 </ul>
             </nav>
         </div>
+
         <img class="place-three" src="./Pictures/test_seven.webp" alt="human prasing God on his knees">
         <img class="place-four" src="./Icons-representaions/back.png" alt="for the back arrow">
 
