--- a/For Phone/Home_page.html
+++ b/For Phone/Home_page.html
@@ -28,7 +28,18 @@
             <p class="plat-one">Thanks to all our investors for the</p>
             <p class="plat-three">ability to multitask all our</p>
             <p class="plat-three">services through different means.</p>
-            <input type="text" placeholder="Search our events here" class="plat-two">
+            <nav class="try-three">
+                <ul>
+                    <li>
+                        <Button class="try-two">Events <img src="./Icons-representations/back_down_three.png" class="try-four"></Button>
+                    </li>
+                    <li><input type="text" placeholder="Search our events here" class="plat-two"></li>
+                    <li>
+                        <Button class="try-one">Search <img src="./Icons-representations/search_things.png" class="try-five"></Button>
+                    </li>
+                </ul>
+            </nav>
+
         </div>
 
 
