--- a/main_page.html
+++ b/main_page.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="main_page.css">
     <title>Upper Room</title>
+    <link rel="icon" type="image/x-icon" href="./Pictures/logo.png">
     <script>
         const isAndroid = /Android/i.test(navigator.userAgent);
         const isWindows = /Windows/i.test(navigator.userAgent);
