--- a/For Phone/Home_page.html
+++ b/For Phone/Home_page.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="./Pictures/logo.png">
     <link rel="stylesheet" href="Home_page.css">
 </head>
 
@@ -19,6 +20,26 @@
         <p class="test-five-test">upon the face of the earth: The Lord is his name.</p>
         <p class="test-five-test">Amos 9.6</p>
 
+        <nav class="line-one">
+            <ul>
+                <li><img src="./Icons-representations/line1.png" alt="for the line deviation"></li>
+                <li><img src="./Icons-representations/line1.png" alt="for the line deviation"></li>
+                <li><img src="./Icons-representations/line1.png" alt="for the line deviation"></li>
+
+            </ul>
+        </nav>
+
+
+        <p class="signal-loc">
+            <a href="https://www.google.com/maps/search/26,Akinyemi+Street,+Giwa+Oke-Aro,%C2%A0Ogun%C2%A0State/@6.6812433,3.3211138,15.31z?entry=ttu&g_ep=EgoyMDI0MTAwNy4xIKXMDSoASAFQAw%3D%3D">LOCATE PATH TO OUR PARISH</a></p>
+
+        <nav>
+            <ul>
+                <li>30+</li>
+                <li>150+</li>
+                <li>20+</li>
+            </ul>
+        </nav>
     </header>
     <main class="header-container"></main>
     <main class="main-container">
