--- a/For Phone/Home_page.html
+++ b/For Phone/Home_page.html
@@ -31,13 +31,36 @@
 
 
         <p class="signal-loc">
-            <a href="https://www.google.com/maps/search/26,Akinyemi+Street,+Giwa+Oke-Aro,%C2%A0Ogun%C2%A0State/@6.6812433,3.3211138,15.31z?entry=ttu&g_ep=EgoyMDI0MTAwNy4xIKXMDSoASAFQAw%3D%3D">LOCATE PATH TO OUR PARISH</a></p>
+            <a href="https://www.google.com/maps/search/26,Akinyemi+Street,+Giwa+Oke-Aro,%C2%A0Ogun%C2%A0State/@6.6812433,3.3211138,15.31z?entry=ttu&g_ep=EgoyMDI0MTAwNy4xIKXMDSoASAFQAw%3D%3D">FIND OUR PARISH</a></p>
 
-        <nav>
+        <nav class="num-three">
             <ul>
                 <li>30+</li>
                 <li>150+</li>
-                <li>20+</li>
+                <li>15+</li>
+            </ul>
+        </nav>
+        <nav class="num-four">
+            <ul>
+                <li>is the number</li>
+                <li>of workers</li>
+                <li>currently.</li>
+            </ul>
+        </nav>
+
+        <nav class="num-five">
+            <ul>
+                <li>current members</li>
+                <li>worshipping </li>
+                <li>with us.</li>
+            </ul>
+        </nav>
+
+        <nav class="num-six">
+            <ul>
+                <li>current number</li>
+                <li>of ministers</li>
+                <li>with us.</li>
             </ul>
         </nav>
     </header>
