--- a/For Phone/Home_page.html
+++ b/For Phone/Home_page.html
@@ -84,15 +84,22 @@
                     </li>
                 </ul>
             </nav>
-
         </div>
-
-
         <img src="./Pictures/test_seven.webp" class="type-one">
+
+        <p class="par-one">Follow us here Upperroom Mega Chapel for all our chruch</p>
+        <p class="par-two">activities or stream our weekly/montly</p>
+        <p class="par-three">events here at upperroom</p>
+        <nav class="par-four">
+            <ul>
+                <li><button class="par-five">View events</button></li>
+                <li><button class="par-five"></button></li>
+            </ul>
+        </nav>
     </main>
 
     <img class="test-infix" src="./Icons-representations/back_down_two.png">
-    <img class="test-seven" src="./Icons-representations/sample_five.png" alt="the questions and request style...">
+    <a href="messaging.html"><img class="test-seven" src="./Icons-representations/sample_five.png" alt="the questions and request style..."></a>
     <script src="Home_page.js"></script>
 </body>
 
