--- a/For Phone/Home_page.html
+++ b/For Phone/Home_page.html
@@ -71,14 +71,14 @@
             <p class="place-one">We will like to thank God for another</p>
             <p class="place-two">Great new achivement.</p>
             <p class="plat-one">Thanks to all our investors for the</p>
-            <p class="plat-three">ability to multitask all our</p>
+            <p class="plat-three">ability to multitask our</p>
             <p class="plat-three">services through different means.</p>
             <nav class="try-three">
                 <ul>
                     <li>
                         <Button class="try-two">Events <img src="./Icons-representations/back_down_three.png" class="try-four"></Button>
                     </li>
-                    <li><input type="text" placeholder="Search our events here" class="plat-two"></li>
+                    <li><input type="text" placeholder="Search any events here" class="plat-two"></li>
                     <li>
                         <Button class="try-one">Search <img src="./Icons-representations/search_things.png" class="try-five"></Button>
                     </li>
@@ -87,17 +87,23 @@
         </div>
         <img src="./Pictures/test_seven.webp" class="type-one">
 
-        <p class="par-one">Follow us here Upperroom Mega Chapel for all our chruch</p>
-        <p class="par-two">activities or stream our weekly/montly</p>
-        <p class="par-three">events here at upperroom</p>
+        <p class="par-one">Follow us here at Upperroom Mega Chapel for</p>
+        <p class="par-two">all our chruch activities or stream</p>
+        <p class="par-three">our weekly/montly events</p>
+        <p class="par-three">here through our website.</p>
         <nav class="par-four">
             <ul>
-                <li><button class="par-five">View events</button></li>
-                <li><button class="par-five"></button></li>
+                <li>
+                    <a href="youtube.com"><button class="par-five">Stream contents</button></a>
+                </li>
+                <li>
+                    <a href="rccg.org"><button class="par-five">Follow us</button></a>
+                </li>
             </ul>
         </nav>
-    </main>
 
+        <div class="div-one"></div>
+    </main>
     <img class="test-infix" src="./Icons-representations/back_down_two.png">
     <a href="messaging.html"><img class="test-seven" src="./Icons-representations/sample_five.png" alt="the questions and request style..."></a>
     <script src="Home_page.js"></script>
