--- a/main_page.html
+++ b/main_page.html
@@ -51,8 +51,19 @@
         <p class="test-five-test">Amos 9.6</p>
         <img class="play-with" src="./Icons-representations/nigeria.png" alt="">
 
-        <p class="play-test-sample"><a href="">CONNECT TO OFFICIALS</a></p>
-        <p class="tell-one">______________</p>
+
+        <nav class="heat-one">
+            <ul>
+                <li><img src="./Icons-representations/line1.png" alt="for the line deviation"></li>
+                <li><img src="./Icons-representations/line1.png" alt="for the line deviation"></li>
+                <li><img src="./Icons-representations/line1.png" alt="for the line deviation"></li>
+            </ul>
+        </nav>
+
+        <p class="play-test-sample">
+            <a href="https://www.google.com/maps/search/26,Akinyemi+Street,+Giwa+Oke-Aro,%C2%A0Ogun%C2%A0State/@6.6812433,3.3211138,15.31z?entry=ttu&g_ep=EgoyMDI0MTAwNy4xIKXMDSoASAFQAw%3D%3D">FIND OUR PARISH</a>
+        </p>
+
 
     </header>
 
@@ -77,7 +88,8 @@
         <img class="place-three" src="./Pictures/test_seven.webp" alt="human prasing God on his knees">
         <img class="place-four" src="./Icons-representaions/back.png" alt="for the back arrow">
 
-        <h3>Follow us here on upper room mega chapel for more updates/contents</h3>
+        <h3>Follow us here at Upperroom Mega Chapel for all our chruch activities</h3>
+        <p class="head-second">or stream our weekly/montly events here through our website.</p>
         <nav class="place-ten">
             <ul>
                 <li><button class="button-one"><img  class="play-seven" src="./Icons-representations/flower_test.png" alt="this will load with the image">Follow our updates<img  class="play-seven" src="flower_test.png" alt="this will load with the image"></button></li>
